kitchen view - added sum column

--- a/webapp/cafe/views/kitchen_display.jade
+++ b/webapp/cafe/views/kitchen_display.jade
@@ -58,8 +58,9 @@ append scripts
                 $('<td>'),
                 $('<td>'),
                 $('<td>'),
-                $('<td>').addClass("table-sum").text("Suma:"),
-                $('<td>').text((total_qty+total_qty_extra)+" "+total_units)
+                $('<td>'),
+                $('<td>'),
+                $('<td>').text((total_qty+total_qty_extra)+" ("+total_units+")")
             );
             total_qty = 0;
             total_qty_extra = 0;
@@ -82,7 +83,8 @@ append scripts
                 $('<td>').text((fn!=last_fn)?fn:""),
                 $('<td>').text(i.pos_name),
                 $('<td>').text(i.qty?i.qty:0),
-                $('<td>').text(i.qty_extra?i.qty_extra:0)
+                $('<td>').text(i.qty_extra?i.qty_extra:0),
+                $('<td>')
             );
             total_qty += i.qty; 
             total_qty_extra += i.qty_extra; 
@@ -102,8 +104,9 @@ append scripts
                             $('<th>').addClass('col-md-2').text("Typ"),
                             $('<th>').addClass('col-md-4').text("Potrawa"),
                             $('<th>').addClass('col-md-2').text("Pkt. Sprzedaży"),
-                            $('<th>').addClass('col-md-2').text("Zamówienie"),
-                            $('<th>').addClass('col-md-2').text("Zam. Extra")
+                            $('<th>').addClass('col-md-1').text("Zam."),
+                            $('<th>').addClass('col-md-1').text("Extra"),
+                            $('<th>').addClass('col-md-1').text("Suma")
                         )
                     ),
                     $('<tbody>').attr('id', 'menu_items').append(
