--- a/webapp/cafe/views/pos_display.jade
+++ b/webapp/cafe/views/pos_display.jade
@@ -95,8 +95,8 @@ append scripts
             return (html_total)?(html_total.add(html)):(html);
         }
 
-        function renderDisplay(kitchen_display, menu) {
-            $("#heading").text(kitchen_display.name + " " + menu.dt);
+        function renderDisplay(pos_display, menu) {
+            $("#heading").text(pos_display.name + " " + menu.dt);
             $("#display").append(
                 $('<table>').addClass('table').append(
                     $('<thead>').append(
@@ -122,11 +122,11 @@ append scripts
 
         // Document is ready and loaded
         $(document).ready(function() {
-            $.ajax("api/kitchen_displays/"+kitchenDisplayId)
-                .done(function(kitchen_display) {
-                    $.ajax("api/menus/"+menuId+"?kitchen_id="+kitchen_display.kitchen_id)
+            $.ajax("api/pos_displays/"+posDisplayId)
+                .done(function(pos_display) {
+                    $.ajax("api/menus/"+menuId+"?pos_id="+pos_display.pos_id)
                         .done(function(menu) {
-                            renderDisplay(kitchen_display, menu);
+                            renderDisplay(pos_display, menu);
                         })
                         .fail(function(err) {
                             console.error("Getting data from server failed", err);
