kitchen view progress

--- a/webapp/cafe/views/kitchen_display.jade
+++ b/webapp/cafe/views/kitchen_display.jade
@@ -140,7 +140,7 @@ append scripts
                 renderMenuItem(i);
             });
             renderFoodFooter();
-            $("#timestamp").text(new moment().format("YYYY-MM-DD HH:mm:ss"));
+            $("#timestamp").text(new moment().format("YYYY-MM-DD HH:mm"));
         }
 
         // Reload the data and render 
