Added displays module

--- a/webapp/cafe/views/menus.jade
+++ b/webapp/cafe/views/menus.jade
@@ -11,6 +11,7 @@ append styles
 block body
     +navbar-fixed("Arkadia Cafe","navbar","inverse")
         +nav_item("menus","active") Menu
+        +nav_item("displays") Ekrany
         +nav_item("logout") Wyloguj
     .container.theme-showcase(role='main')
         .page-header
